[gd_scene load_steps=6 format=2]

[ext_resource path="res://font/led_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/ShipyardUI.gd" type="Script" id=2]
[ext_resource path="res://UI/ShipBuildInfoRT.gd" type="Script" id=3]
[ext_resource path="res://UI/ShipyardUI_Build.gd" type="Script" id=4]
[ext_resource path="res://UI/BuildStatus.gd" type="Script" id=5]

[node name="Fcty" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Build" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Build"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipBuildInfoRT" type="RichTextLabel" parent="Build/HBoxContainer"]
margin_right = 820.0
margin_bottom = 600.0
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Build/HBoxContainer"]
margin_left = 824.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 200, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildStatus" type="VBoxContainer" parent="Build/HBoxContainer/VBoxContainer"]
visible = false
margin_right = 200.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="Name" type="Label" parent="Build/HBoxContainer/VBoxContainer/BuildStatus"]
margin_right = 200.0
margin_bottom = 12.0

[node name="HSeparator" type="HSeparator" parent="Build/HBoxContainer/VBoxContainer/BuildStatus"]
margin_top = 16.0
margin_right = 200.0
margin_bottom = 20.0

[node name="Image" type="TextureRect" parent="Build/HBoxContainer/VBoxContainer/BuildStatus"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 24.0
stretch_mode = 6

[node name="ProgressBar" type="ProgressBar" parent="Build/HBoxContainer/VBoxContainer/BuildStatus"]
self_modulate = Color( 0.992157, 1, 0, 1 )
margin_top = 28.0
margin_right = 200.0
margin_bottom = 40.0
value = 50.0

[node name="Label" type="Label" parent="Build/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 1 )
text = "Build Queue"
align = 1
valign = 1

[node name="Queue" type="ItemList" parent="Build/HBoxContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 200.0
margin_bottom = 212.0
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="Build/HBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 200.0
margin_bottom = 578.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="Build/HBoxContainer/VBoxContainer"]
margin_top = 582.0
margin_right = 200.0
margin_bottom = 600.0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="build_ship" from="Build" to="." method="_on_Build_build_ship"]
[connection signal="item_activated" from="Build/HBoxContainer/VBoxContainer/ItemList" to="Build" method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="Build/HBoxContainer/VBoxContainer/ItemList" to="Build" method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Build/HBoxContainer/VBoxContainer/OK" to="Build" method="_on_OK_pressed"]
